[workspace]
resolver = "2"
members = [
    "dace",
    "dace_tests",
    "lru/stack_alg_sim",
    "hist",
    "static_rd",
    "list_serializable",
#    "polybenchrun",
    "lru/stack_test_cases",
    "lru/benches/lruvec_bench",
    "lru/benches/stack_alg_sim_bench",
    "static_ri",
    "clam_trace_gen"
]

[profile.release]
debug = true
lto = true
